# flitton-fib-rs

./: .gitignore  Cargo.toml  README.md  build-wheels.sh  example.yml  setup.py  test.py
flitton_fib_rs/: __init__.py  config_number_command.py  fib_number_adapter.py  fib_number_command.py  numpy_interface.py  singleton.py
flitton_fib_rs/cmd/: fib_number.py
src/: lib.rs  main.rs  numpy_model.rs
src/class_module/: fib_processor.rs
src/fib_calcs/: fib_number.rs  fib_numbers.rs  mod.rs
src/interface/: config.rs  fib_number.rs  object.rs  test.rs
src/simple_model/: simple_model.rs
